  - Fixed defect  #832 Indexing of Cast, Director, etc is not performed when the movie is in a set  
  - Fixed defect  #945 imdb.getCertificationFromMPAA setting is ignored if mpaa tag is present in the NFO
  - Fixed defect #1006 Wrong fanart file name if NFO <fanart> field filled in link
  - Enhancement  #1013 Support for localised IMDB, e.g. (ES, FR, DE, etc)  
  - Fixed defect #1022 ofdb.plugin overwrites nfo information
  - Enhancement  #1148 Categories.xml list ordering  
  - Fixed defect #1152 Moviejukebox does not complete - stuck on Sratim plugin  
  - Fixed defect #1156 BAd forma date with plugin mjb.internet.plugin=com.moviejukebox.plugin.FilmUpITPlugin  
  - Enhancement  #1175 Also detect PGS subtiltes  
  - Fixed defect #1176 Use of runtime element in NFO  
  - Fixed defect #1187 Trailing '|' character in IMDB plots
  - Enhancement  #1188 Add support for Danish language tag in the filename  
  - Fixed defect #1190 IMDb parser gets wrong title for movie with parentheses
  - Fixed defect #1194 NFO fileinfo streamdetails are not overriding the MediaInfo scraped information
  - Fixed defect #1195 Problems with a Trailer file and a Trailer link in condition with [Disc],[Part].. in file name  
  - Enhancement  #1199 Hebrew plot for episodes using Sratim plugin 
  - Fixed defect #1202 Standardised plot length across plugins
  - Fixed defect #1204 Video output in the YAMJ generated XML file is always 'UNKNOWN 60Hz'
  - Fixed defect #1205 Video Output does not use MediaInfo information
  - Fixed defect #1211 Audio channels always UNKNOWN
  - Fixed defect #1214 Tv Episode title not used from filename if plugin times out  
  - Fixed defect #1221 Audio information defect in XML files
  - Fixed defect #1224 Google/Yahoo thread defaults too high, reduced to 5 each
  - Enhancement  #1225 Add fanart to default & SD skins
  - Fixed defect #1227 Audio information in xml files are still defect with r1315  